(Update): destop-overflow-bug -> removes page overflow-x on desktop to make the project more presentable

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@
   color: var(--white);
 }
 
+body {
+  overflow-x: clip;
+}
+
 #root {
   max-width: 1280px;
   height: 100dvh;
